package edu.fiuba.algo3.modelo.Configuracion;

import edu.fiuba.algo3.modelo.Mazo;

public interface EstrategiaBalanceo {
    Mazo crearMazo(int cantidadJugadores);
}
